Update Anna_archive plugin

--- a/setup.cfg
+++ b/setup.cfg
@@ -88,6 +88,7 @@ install_requires =
     # requests-html~=0.10
     semver~=2.10
     setuptools>=38.3
+    requests
 python_requires = >=3.6
 
 [options.packages.find]
